@@ -39,9 +39,9 @@ import nl.rivm.screenit.util.query.SQLQueryUtil;
 import nl.topicuszorg.hibernate.spring.dao.HibernateService;
 import nl.topicuszorg.hibernate.spring.dao.impl.AbstractAutowiredDao;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.shiro.util.CollectionUtils;
-import org.hibernate.SQLQuery;
+import org.hibernate.query.NativeQuery;
 import org.hibernate.type.DateType;
 import org.hibernate.type.LongType;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -60,7 +60,7 @@ public class ProjectDaoImpl extends AbstractAutowiredDao implements ProjectDao
 	@Autowired
 	private ICurrentDateSupplier currentDateSupplier;
 
-	private SQLQuery getDefaultSqlProjectQuery(Project zoekObject, List<Long> instellingIdsProject, List<Long> instellingIdsBriefproject, SortState<String> order)
+	private NativeQuery getDefaultSqlProjectQuery(Project zoekObject, List<Long> instellingIdsProject, List<Long> instellingIdsBriefproject, SortState<String> order)
 	{
 		var vandaag = currentDateSupplier.getDate();
 		var parameters = new HashMap<String, Object>();
@@ -71,7 +71,7 @@ public class ProjectDaoImpl extends AbstractAutowiredDao implements ProjectDao
 
 		if (zoekObject.getProjectStatussen() != null && !zoekObject.getProjectStatussen().isEmpty())
 		{
-			var projectstatuswhere = getProjectStatusWhere(zoekObject.getProjectStatussen(), vandaag);
+			var projectstatuswhere = getProjectStatusWhere(zoekObject.getProjectStatussen());
 			if (projectstatuswhere != null)
 			{
 				where = SQLQueryUtil.whereOrAnd(where);
@@ -193,7 +193,7 @@ public class ProjectDaoImpl extends AbstractAutowiredDao implements ProjectDao
 		return criteria;
 	}
 
-	private String getProjectStatusWhere(List<ProjectStatus> statussen, Date vandaag)
+	private String getProjectStatusWhere(List<ProjectStatus> statussen)
 	{
 		if (statussen != null && !statussen.isEmpty())
 		{
@@ -264,7 +264,7 @@ public class ProjectDaoImpl extends AbstractAutowiredDao implements ProjectDao
 	@Transactional(propagation = Propagation.REQUIRED)
 	public void resetWachtOpStartProject(Bevolkingsonderzoek bvo)
 	{
-		var sql = String.format("update %s.%s set wacht_op_start_project = false where wacht_op_start_project = true or wacht_op_start_project is null",
+		var sql = "update %s.%s set wacht_op_start_project = false where wacht_op_start_project = true or wacht_op_start_project is null".formatted(
 			getSchema(bvo), getDossierTable(bvo));
 		var query = getSession().createNativeQuery(sql);
 		var aantal = query.executeUpdate();
@@ -275,18 +275,18 @@ public class ProjectDaoImpl extends AbstractAutowiredDao implements ProjectDao
 	@Transactional(propagation = Propagation.REQUIRED)
 	public void setNieuwWachtOpStartProject(Bevolkingsonderzoek bvo, Date nu)
 	{
-		var sql = String.format("update %s.%s set wacht_op_start_project = true WHERE id in "
-				+ "(select dossier_.id as y0_ " +
-				"from gedeeld.project_client projectClient_ " +
-				"inner join gedeeld.pat_patient patient_ on projectClient_.client=patient_.id " +
-				"inner join %s.%s dossier_ on patient_.%s=dossier_.id " +
-				"inner join gedeeld.project_groep groep1_ on projectClient_.groep=groep1_.id " +
-				"inner join algemeen.project project2_ on groep1_.project=project2_.id " +
-				"inner join algemeen.project_bevolkingsonderzoeken projectBevolkingsonderzoeken3_ on project2_.id=projectBevolkingsonderzoeken3_.project " +
-				"where project2_.type='PROJECT' " +
-				"and (project2_.start_datum>:startDatum or (project2_.eind_datum>:eindDatum and groep1_.actief=false)) " +
-				"and projectClient_.actief=true " +
-				"and projectBevolkingsonderzoeken3_.bevolkingsonderzoeken='%s')",
+		var sql = ("update %s.%s set wacht_op_start_project = true WHERE id in "
+			+ "(select dossier_.id as y0_ " +
+			"from gedeeld.project_client projectClient_ " +
+			"inner join gedeeld.pat_patient patient_ on projectClient_.client=patient_.id " +
+			"inner join %s.%s dossier_ on patient_.%s=dossier_.id " +
+			"inner join gedeeld.project_groep groep1_ on projectClient_.groep=groep1_.id " +
+			"inner join algemeen.project project2_ on groep1_.project=project2_.id " +
+			"inner join algemeen.project_bevolkingsonderzoeken projectBevolkingsonderzoeken3_ on project2_.id=projectBevolkingsonderzoeken3_.project " +
+			"where project2_.type='PROJECT' " +
+			"and (project2_.start_datum>:startDatum or (project2_.eind_datum>:eindDatum and groep1_.actief=false)) " +
+			"and projectClient_.actief=true " +
+			"and projectBevolkingsonderzoeken3_.bevolkingsonderzoeken='%s')").formatted(
 			getSchema(bvo), getDossierTable(bvo), getSchema(bvo), getDossierTable(bvo), getJoinColumn(bvo), bvo.name());
 		var query = getSession().createNativeQuery(sql);
 		query.setParameter("startDatum", nu, DateType.INSTANCE);
