@@ -22,19 +22,20 @@ package nl.rivm.screenit.model;
  * =========================LICENSE_END==================================
  */
 
+import java.io.Serial;
 import java.util.Date;
 import java.util.List;
 
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.EnumType;
-import javax.persistence.Enumerated;
-import javax.persistence.Index;
-import javax.persistence.ManyToOne;
-import javax.persistence.Table;
-import javax.persistence.Temporal;
-import javax.persistence.TemporalType;
-import javax.persistence.Transient;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.Index;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import jakarta.persistence.Temporal;
+import jakarta.persistence.TemporalType;
+import jakarta.persistence.Transient;
 
 import nl.rivm.screenit.model.enums.BriefType;
 
@@ -51,6 +52,7 @@ import org.hibernate.envers.NotAudited;
 public abstract class MergedBrieven<B extends Brief> extends TablePerClassHibernateObject implements IActief
 {
 
+	@Serial
 	private static final long serialVersionUID = 1L;
 
 	@Temporal(TemporalType.TIMESTAMP)
@@ -84,7 +86,7 @@ public abstract class MergedBrieven<B extends Brief> extends TablePerClassHibern
 	private ScreeningOrganisatie screeningOrganisatie;
 
 	@Column(nullable = false)
-	private Integer aantalBrieven = new Integer(0);
+	private Integer aantalBrieven = Integer.valueOf(0);
 
 	@Temporal(TemporalType.TIMESTAMP)
 	private Date controleerDatum;
